[package]
name = "carajillo"
version = "0.1.0"
authors = ["Andrew Zah <zah@andrewzah.com>"]
edition = "2018"
license = "AGPL-3.0-only"

[dependencies]
ansi_term = "0.12"
argh = "0.1"
quick-xml = { version = "0.22", features = [ "serialize" ] }
serde = { version = "1.0", features = [ "derive" ] }
ureq = "2.1"
tabwriter = { version = "1", features = ["ansi_formatting"] }
